style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
nav {
  width: 100%;
  display: flex;
  justify-content: space-around;
  align-items: center;
  min-height: 8vh;
  background: #feffff;
}
body {
  font-family: "Poppins", sans-serif;
  -webkit-font-smoothing: antialiased;
  --lightBlue: #3d5afe;
  --darkBlue: #1a237e;
  --purple: #6200ee;
  --blue: #6200ee;
  --shadow: 0 50px 100px rgba(50, 50, 93, 0.05),
    0 15px 35px rgba(50, 50, 93, 0.1), 0 5px 15px rgba(0, 0, 0, 0.1);
  background: #f4f6ff;
}
#logo {
  font-family: "Great Vibes", cursive;
  font-weight: bolder;
  text-align: center;
  position: absolute;
  top: 5px;
  left: 10px;
  color: black;
  font-size: 22px;
  font-weight: 600;
  letter-spacing: 2px;
  width: 5.5vh;
  height: 5.5vh;
  padding: 8px 5px;
}
.nav-links {
  position: absolute;
  right: 5px;

  font-weight: 500;
  display: flex;
  justify-content: space-around;
  min-width: 35vw;
}
.nav-links a {
  font-weight: 300;
  text-decoration: none;
  letter-spacing: 1.5px;
  padding: 5px 15px;
  font-size: 18px;
  color: var(--lightBlue);
}
.nav-links a:hover {
  border-bottom: 1px solid var(--lightBlue);
}
.resumeLink {
  border: 1px solid var(--lightBlue);
  border-radius: 290486px;
  background-color: var(--lightBlue);
  color: #fff !important;
}
.nav-links li {
  list-style: none;
}
.burger {
  display: none;
  border-radius: 100%;
  flex-direction: column;
  justify-content: space-evenly;
}
.burgerLine {
  border-radius: 20%;
  height: 2px;
  width: 20px;
  background: #3d5afe;
  margin: 0 8px 4px 2px;
}
.home {
  width: 100%;
  height: 100vh;
  background: #feffff;
}
.intro {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 90%;
  text-align: center;
}

.about {
  position: relative;
}

.banner {
  text-align: center;
  line-height: 1.6;
  letter-spacing: 1px;
  font-size: 46px;
  font-weight: 600;
  z-index: 1;
  color: black;
  text-shadow: var(--shadow);
}
.name {
  color: var(--lightBlue);
  letter-spacing: 1px;
  line-height: 1.6;
}
.iconContainer {
  text-align: center;
}
.fa-chevron-circle-down {
  font-size: 25px;
  animation-duration: 5s;
  position: absolute;
  bottom: 20px;
  color: var(--lightBlue);
  text-decoration: none;
}
section {
  width: 92%;
  height: fit-content;
  position: relative;
  margin: 0;
  padding: 0;
}
.spacer {
  width: 100%;
  margin: 30px 0;
}
.wrapper {
  display: block;
  height: 100%;
  width: 100%;
  padding: 0px 95px;
}
.wrapperContact {
  display: block;
  height: 100%;
  width: 100%;
  padding: 10px 100px;
  margin-top: 25px;
  background: #fff;
}
.headerContainer {
  text-align: center;
  margin: 150px 0 90px 0;
  position: relative;
}
.header {
  color: #1a237e;
  text-align: center;
  display: inline-block;
  margin: auto;
  font-size: 32px;
  text-shadow: var(--shadow);
}
.headerContainer :after {
  content: " ";
  display: block;
  border: 3px solid var(--lightBlue);
  margin: auto;
  margin-top: 30px;
  width: 150px;
}
.frame {
  background: #feffff;
  border-radius: 16px;
  box-shadow: var(--shadow);
  height: 92vh;
  width: 100%;
}

.aboutFrame {
  position: relative;
  display: flex;
  height: 500px;
  background: #fff;
  box-shadow: var(--shadow);
  overflow: hidden;
}

.profile-container {
  position: relative;
  max-width: fit-content;
  min-height: 100%;
  min-width: 25%;
  box-shadow: var(--shadow);
}
.profile {
  height: 100%;
  max-width: 100%;
}
.description {
  border-radius: 16px;
  display: flex;
  flex-direction: column;
  min-width: 70%;
  height: 100%;
  padding: 60px;
  color: #1a237e;
}

.description span {
  padding: 10px 10px;
  font-size: 16px;
}
.linkContainer {
  margin-top: 20px;
}
.linkTo {
  text-decoration: none;
  letter-spacing: 1.5px;
  padding: 5px 15px;
  font-size: 16px;
  border: 1px solid var(--lightBlue);
  border-radius: 10px;
  background-color: var(--lightBlue);
  color: #fff !important;
  margin: 15px 5px;
}
.linkTo-I {
  margin-left: 5px;
}
.projectFrame {
  display: flex;
  height: 400px;
  flex-direction: row;
  position: relative;
  padding: 0;
  border-radius: 16px;
  overflow: hidden;
}

.projectImage {
  display: block;
  height: 100%;
  width: 100%;
  box-shadow: var(--shadow);
}

.project1Image {
  object-fit: fill;
}

.project2Image {
  object-fit: stretch;
}

.imageContainer , .imageContainer2{
  display: flex;
  position: relative;
  width: 50%;
  min-height: 100%;
  overflow: hidden;
  box-shadow: var(--shadow);
}

.descriptionContainer {
  max-width: 60%;
  height: fit-content;
  padding: 60px;
}
.projectTitle {
  text-align: center;
  font-size: 1.3em;
  margin: 0 0 35px;
  color: #1a237e;
}

.projectDescription {
  color: #1a237e;
  margin: 0 0 30px;
  font-size: 16px;
}
.projectDescriptionSmall {
  color: #1a237e;
  margin: 0 0 30px;
  font-size: 14px;
}

.projectTech {
  display: inline-block;
}
.techLabel {
  margin: 0 10px 10px 0;
  padding: 8px;
  border-radius: 4px;
  border: 1px solid #00bf25;
  font-size: 0.85em;
}

.projectLinks {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  flex-wrap: wrap;
  margin-top: 5px;
}
.projectLink1 {
  margin-right: 20px;
  margin-top: 20px;
  white-space: nowrap;
  display: inline-block;
  line-height: 40px;
  padding: 0 14px;
  box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
  border-radius: 10px;
  letter-spacing: 0.025em;
  text-decoration: none;
  transition: all 0.15s ease;
  font-size: 0.9em;
  font-weight: 600;
  box-sizing: border-box;
  background: var(--lightBlue);
  color: #fff;
}
.projectLink2 {
  color: var(--darkBlue);
  margin-right: 20px;
  margin-top: 20px;
  white-space: nowrap;
  display: inline-block;
  line-height: 40px;
  padding: 0 14px;
  box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
  border-radius: 10px;
  letter-spacing: 0.025em;
  text-decoration: none;
  transition: all 0.15s ease;
  font-size: 0.9em;
  font-weight: 600;
  box-sizing: border-box;
}
.contactFrame {
  background: #fff;
  width: 100%;
  height: 100%;
  margin-top: 0;
  padding: 80px;
  padding-top: 0;
  border: none;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 0px;
  border-bottom-right-radius: 0px;
  box-shadow: var(--shadow);
}
form {
  width: 100%;
}
fieldset {
  min-width: 100%;
  border: none;
  display: flex;
  padding-top: 10px;
  flex-direction: column;
  align-items: center !important;
  justify-content: center !important;
}

::placeholder {
  color: #fff;
  opacity: 1;
}
.nameEmail {
  color: #fff;
  width: 350px;
  border: none;
  height: 5vh;
  margin: 10px auto;
  background: #525f7f;
  border-radius: 290486px;
  padding: 20px;
  font-size: 16px;
}
.yourMessage {
  color: #fff;
  min-width: 350px;
  height: 20vh;
  border: none;
  margin: 10px auto;
  padding: 20px;
  background: #525f7f;
  border-radius: 16px;
  font-size: 16px;
}
.submitButton {
  align-self: flex-end;
  margin: 20px auto;
  white-space: nowrap;
  display: inline-block;
  line-height: 40px;
  padding: 0 20px;
  box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
  border-radius: 10px;
  letter-spacing: 0.025em;
  text-decoration: none;
  transition: all 0.15s ease;
  font-size: 0.9em;
  font-weight: 600;
  box-sizing: border-box;
  border: none;
  background: var(--darkBlue);
  color: #fff;
}

.contactContainer {
  background: #fff;
  padding: 40px 0px 0px 0px;
  margin: 80px 0 0 0 !important;
  border-top-right-radius: 60px;
  border-top-left-radius: 60px;
  color: #1a237e;
  box-shadow: var(--shadow);
}

.home {
  width: 100%;
  height: 100vh;
}
footer {
  height: 20vh;
  width: 100%;
  background: var(--darkBlue);
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.social {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  width: 30vh;
  color: #feffff;
}
.social li {
  list-style: none;
  font-size: 32px;
  color: #feffff;
}
.social a {
  list-style: none;
  font-size: 32px;
  color: #feffff;
}

@media screen and (max-width: 1328px) {
  .banner {
    font-size: 35px;
  }

  .projectImage, .project2Image {
    height: 100%;
    width: 100%;
  }
}

@media screen and (max-width: 1200px) {
  .aboutFrame {
    flex-direction: column;
    height: fit-content;
    padding: 0 0 10px 0;
  }
  .wrapper {
    padding: 0px 10px;
  }
  .wrapperContact {
    padding: 3px 10px;
    margin-top: 10px;
  }
  .profile-container {
    display: flex;
    justify-content: center;
    width: 100%;
    max-height: 35% !important;
  }
  .profile {
    margin-top: 20px;
    border-radius: 16px;
    width: 50%;
    max-height: 35% !important;
    object-fit: cover;
  }
  .description {
    margin-top: 10px;
    padding-bottom: 20px;
    width: 100%;
    flex: 2;
  }
  .burger {
    display: none;
  }
}

@media screen and (max-width: 780px) {
  .banner {
    font-size: 18px;
  }
  .nav-links {
    opacity: 0;
    flex-direction: column;
    position: fixed;
    top: 0px;
    left: 0px;
    align-items: center;
    height: 100vh;
    width: 100% !important;
    background: #1a237e;
    z-index: 3;
    clip-path: circle(0px at 110% -2%);
    -webkit-clip-path: circle(0px at 90% -10%);
    transition: all 0.5s ease-in;
    pointer-events: none;
    padding: 30px 0 280px 0;
  }

  .nav-links.open {
    opacity: 1;
    clip-path: circle(1200px at 90% -10%);
    -webkit-clip-path: circle(1200px at 90% -10%);
    pointer-events: all;
  }
  .nav-links li {
    opacity: 0;
  }

  .nav-links a {
    color: #fff;

    z-index: 10;
  }

  .burger {
    display: flex;
    position: fixed;
    right: 10px;
    z-index: 4;
    transition: all 0.3s ease;
  }
  .line1.toggle {
    transform: rotate(-45deg) translate(-2px, 5px);
    background: #fff;
  }
  .line2.toggle {
    opacity: 0;
  }
  .line3.toggle {
    transform: rotate(45deg) translate(-3px, -6px);
    background: #fff;
  }

  .aboutFrame {
    flex-direction: column;
    padding: 0;
  }

  .profile-container {
    max-width: 100%;
    max-height: 15%;
    padding-bottom: 20px;
  }
  .profile {
    max-width: 100%;
    max-height: 15%;
  }
  .description {
    padding: 0px 10px 20px 10px;
    width: 100%;
  }
  section {
    overflow: hidden;
  }
  .description span {
    padding: 20px 20px;
    font-size: 16px;
  }
  .headerContainer {
    margin: 30px 0 20px 0;
    text-align: center;
  }
  .projectFrame {
    flex-direction: column;
  }
  .submitButton {
    margin-top: 10px;
    align-self: flex-end;
    width: 100px;
  }
  .projectTitle {
    margin: 20px 0;
  }
  .descriptionContainer {
    width: 100%;
    height: 65%;
    padding: 10px 20px 20px 20px;
  }
  .imageContainer , .imageContainer2{
    width: 100%;
    height: 35%;
  }
  .projectsContainer {
    margin-top: 100px;
  }
  fieldset {
    margin: 30px 0;
    padding: 0;
  }
  form {
    margin: 0;
    padding: 0;
  }

  .contactContainer {
    padding: 40px 0px 0px 0px;
  }
  .contactFrame {
    margin: 0;
    padding: 10px;

  }
  .nameEmail {
   width:  320px;
}

.yourMessage {
  min-width: 320px;
}

@keyframes navLinkFade {
  from {
    opacity: 0;
    transform: translate(50px);
  }

  to {
    opacity: 1;
    transform: translate(0px);
  }
}

